GUACAMOLE-1085: Fix form field alignment
Angular Components introduce new elements which interfere with the display: table CSS rule. The display: contents rule is used to ignore these elements inside the css table.

--- a/guacamole/src/main/guacamole-frontend/projects/guacamole-frontend/src/app/manage/styles/attributes.css
+++ b/guacamole/src/main/guacamole-frontend/projects/guacamole-frontend/src/app/manage/styles/attributes.css
@@ -30,8 +30,12 @@
     margin: 1em;
 }
 
-.attributes .form .fields .labeled-field {
+.attributes .form .fields guac-form-field {
     display: table-row;
+}
+
+.attributes .form .fields .labeled-field {
+    display: contents;
 }
 
 .attributes .form .fields .field-header,
