--- a/guacamole/src/main/guacamole-frontend/projects/guacamole-frontend/src/app/manage/styles/connection-parameter.css
+++ b/guacamole/src/main/guacamole-frontend/projects/guacamole-frontend/src/app/manage/styles/connection-parameter.css
@@ -32,8 +32,12 @@
     width: 100%;
 }
 
-.connection-parameters .form .fields .labeled-field {
+.connection-parameters .form .fields guac-form-field {
     display: table-row;
+}
+
+.connection-parameters .form .fields .labeled-field {
+    display: contents;
 }
 
 .connection-parameters .form .fields .field-header,
