--- a/guacamole/src/main/guacamole-frontend/projects/guacamole-frontend/src/app/notification/styles/notification.css
+++ b/guacamole/src/main/guacamole-frontend/projects/guacamole-frontend/src/app/notification/styles/notification.css
@@ -111,8 +111,12 @@
     width: 100%;
 }
 
-.notification .parameters .fields .labeled-field {
+.notification .parameters .fields guac-form-field {
     display: table-row;
+}
+
+.notification .parameters .fields .labeled-field {
+    display: contents;
 }
 
 .notification .parameters .fields .field-header,
